// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert Component - Comprehensive UI Testing Snapshot Testing for UI Consistency should match snapshot for alert without title 1`] = `
<div
  class="relative w-full rounded-lg border p-4 [&>svg~*]:pl-7 [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 [&>svg]:text-foreground bg-background text-foreground"
  role="alert"
>
  <div
    class="text-sm [&_p]:leading-relaxed"
  >
    Alert without title
  </div>
</div>
`;

exports[`Alert Component - Comprehensive UI Testing Snapshot Testing for UI Consistency should match snapshot for default alert 1`] = `
<div
  class="relative w-full rounded-lg border p-4 [&>svg~*]:pl-7 [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 [&>svg]:text-foreground bg-background text-foreground"
  role="alert"
>
  <h5
    class="mb-1 font-medium leading-none tracking-tight"
  >
    Test Alert
  </h5>
  <div
    class="text-sm [&_p]:leading-relaxed"
  >
    This is a test alert.
  </div>
</div>
`;

exports[`Alert Component - Comprehensive UI Testing Snapshot Testing for UI Consistency should match snapshot for destructive alert 1`] = `
<div
  class="relative w-full rounded-lg border p-4 [&>svg~*]:pl-7 [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 border-destructive/50 text-destructive dark:border-destructive [&>svg]:text-destructive"
  role="alert"
>
  <h5
    class="mb-1 font-medium leading-none tracking-tight"
  >
    Error Alert
  </h5>
  <div
    class="text-sm [&_p]:leading-relaxed"
  >
    This is an error alert.
  </div>
</div>
`;
